chore: use relative paths for test files